<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:title="@string/nav_modes">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_modes_basic"
                    android:title="@string/nav_modes_basic"/>
                <item
                    android:id="@+id/nav_modes_scientific"
                    android:title="@string/nav_modes_scientific"/>
                <item
                    android:id="@+id/nav_modes_graphing"
                    android:title="@string/nav_modes_graphing"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"/>

</menu>
